<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.anthemiscosmetics.MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" >

        <ImageView
            android:src="@drawable/sunflower"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/business_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Title"
            android:textAlignment="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="18dp"
            android:fontFamily="cursive"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="#556B2F" />

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below ="@id/business_name"
            android:layout_centerHorizontal="true"
            android:text="@string/Logo"
            android:textAlignment="center"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:paddingBottom="18dp"
            android:fontFamily="cursive"
            android:textSize="26sp"
            android:textStyle="italic"
            android:textColor="#556B2F" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Company_Short_Description"
            android:textAlignment="center"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="cursive"
            android:padding="18dp"
            android:textSize="26sp"
            android:textStyle="italic"
            android:textColor="#000000" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFFFFF"  >

        <Button
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:text="@string/Company_Address"
            android:textStyle="italic"
            android:textAllCaps="false"
            android:background="#808080"
            android:drawableLeft="@drawable/marker_marker_inside"
            android:onClick="showFullAddress"/>
        <Button
            android:id="@+id/products"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/Products"
            android:textStyle="italic"
            android:textAllCaps="false"
            android:background="#696969"
            android:drawableRight="@drawable/basket"
            android:onClick="showProducts"/>
        <Button
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:text="www.facebook.com/anthemiscosmetics/"
            android:textStyle="italic"
            android:textAllCaps="false"
            android:background="#808080"
            android:drawableLeft="@drawable/facebook_square_blue"
            android:onClick="showFacebookAddress"/>

    </LinearLayout>

</LinearLayout>